added crud support for collections and renamed some files
