# api/swagger/swagger.yaml
@@ -21,7 +21,7 @@ paths:
   /location:
     x-swagger-router-controller: location
     get:
-      operationId: getAll
+      operationId: getAllLocations
       description: get locations list
       responses:
         "200":
@@ -33,10 +33,10 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
     post:
-      operationId: save
+      operationId: saveLocation
       description: add location to the list
       parameters:
-        - name: title
+        - name: location
           description: Location properties
           in: body
           required: true
@@ -54,7 +54,7 @@ paths:
   /location/{id}:
     x-swagger-router-controller: location
     get:
-      operationId: getOne
+      operationId: getOneLocation
       description: get a location
       parameters:
         - name: id
@@ -71,7 +71,7 @@ paths:
           schema:
             $ref: "#/definitions/ErrorResponse"
     put:
-      operationId: update
+      operationId: updateLocation
       description: update a location
       parameters:
         - name: id
@@ -112,10 +112,134 @@ paths:
           description: Error
           schema:
             $ref: "#/definitions/ErrorResponse"
+  /collection:
+    x-swagger-router-controller: collection
+    get:
+      operationId: getAllCollections
+      description: add a collection
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GetCollectionsListResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    post:
+      operationId: saveCollection
+      description: add a collection
+      parameters:
+        - name: collection
+          description: collection that is being added
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/Collection"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+  /collection/{id}:
+    x-swagger-router-controller: collection
+    get:
+      operationId: getOneCollection
+      description: get a single collection
+      parameters:
+        - name: id
+          description: collection id
+          in: path
+          required: true
+          type: string
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GetCollectionResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    put:
+      operationId: updateCollection
+      description: update a collection
+      parameters:
+        - name: id
+          description: collection id
+          type: string
+          in: path
+          required: true
+        - name: collection
+          description: collection to update
+          in: body
+          required: true
+          schema:
+            $ref: "#/definitions/Collection"
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+    delete:
+      operationId: delCollection
+      description: delete a collection
+      parameters:
+        - name: id
+          description: collection id
+          type: string
+          in: path
+          required: true
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: "#/definitions/GeneralResponse"
+        default:
+          description: Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
   /swagger:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
+  GetCollectionsListResponse:
+    required:
+      - collections
+    properties:
+      collections:
+        type: array
+        items:
+          $ref: "#/definitions/Collection"
+  Collection:
+    required:
+      - id
+      - locations
+    properties:
+      id:
+        type: string
+      name:
+        type: string
+      locations:
+        type: array
+        items:
+          $ref: "#/definitions/Location"
+      info: 
+        type: object
+  GetCollectionResponse:
+    required:
+      - collection
+    properties:
+      collection:
+        $ref: "#/definitions/Collection"
   GetLocationsListResponse:
     required:
       - locations
